# leios-wfa-ls-demo

./: .gitignore  README.md  cabal.project  flake.nix  fourmolu.yaml  plot_stake.py
leios-wfa-ls-demo/: leios-wfa-ls-demo.cabal
leios-wfa-ls-demo/app/: App.hs  SimulateLocalSortition.hs  VRFExample.hs
leios-wfa-ls-demo/lib/Cardano/: Query.hs  Utils.hs  WeightedFaitAccompli.hs
leios-wfa-ls-demo/lib/Cardano/Leios/: BitMapPV.hs  Certificate.hs  Committee.hs  Crypto.hs  LocalSortition.hs  NonIntegral.hs  Types.hs  Utils.hs  Vote.hs  VoteAccumulator.hs  WeightedFaitAccompli.hs
leios-wfa-ls-demo/test/: Main.hs
leios-wfa-ls-demo/test/Test/Cardano/Leios/: BitMapPV.hs  Certificate.hs  LocalSortition.hs  NonIntegral.hs  Vote.hs  WeightedFaitAccompli.hs
nix/: outputs.nix  project.nix  shell.nix
