cabal-version: 3.4
name: leios-wfa-ls-demo
version: 0.1.0.0
license: Apache-2.0
build-type: Simple

common lang
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Werror

library
  import: lang
  hs-source-dirs: lib
  exposed-modules:
    Cardano.Leios.Committee
    Cardano.Leios.Crypto
    Cardano.Leios.LocalSortition
    Cardano.Leios.NonIntegral
    Cardano.Leios.Types
    Cardano.Leios.Utils
    Cardano.Leios.Vote
    Cardano.Leios.WeightedFaitAccompli
    Cardano.Query
    Cardano.Utils

  build-depends:
    base >=4.9 && <5,
    base16-bytestring,
    bytestring,
    cardano-api ^>=10.16,
    cardano-crypto-class,
    cardano-ledger-core,
    cardano-protocol-tpraos,
    cborg,
    containers,
    errors,
    ouroboros-consensus-cardano,
    text,

executable exec
  import: lang
  main-is: App.hs
  hs-source-dirs: app
  build-depends:
    base >=4.9 && <5,
    bytestring,
    cardano-api ^>=10.16,
    cardano-crypto-class,
    cardano-ledger-core,
    containers,
    leios-wfa-ls-demo,
    optparse-applicative,
    ouroboros-consensus-cardano,
    transformers,

executable vrf-example
  import: lang
  main-is: VRFExample.hs
  hs-source-dirs: app
  build-depends:
    base >=4.9 && <5,
    bytestring,
    cardano-api ^>=10.16,
    cardano-crypto-class,
    cardano-ledger-core,
    containers,
    leios-wfa-ls-demo,
    optparse-applicative,
    ouroboros-consensus-cardano,
    transformers,

test-suite tests
  import: lang
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    Test.Cardano.Leios.NonIntegral
    Test.Cardano.Leios.WeightedFaitAccompli

  build-depends:
    QuickCheck,
    base >=4.9 && <5,
    leios-wfa-ls-demo,
    tasty,
    tasty-quickcheck,

-- benchmark bench
--   type: exitcode-stdio-1.0
--   main-is: Bench.hs
--   hs-source-dirs: bench
--   build-depends:
--     base >=4.9 && <5,
--     leios-wfa-ls-demo,
